--- a/html/index.html
+++ b/html/index.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset= "utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="../css/style.css"/>
         <title>Vélô Toulouse</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-        <link rel="shortcut icon" type="image/jpg" href="images/logo-velotoulouse.jpg"/>
+        <link rel="shortcut icon" type="image/jpg" href="logo-velotoulouse.jpg"/>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
         integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin=""/>
+        <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/MarkerCluster.css" />
+        <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/MarkerCluster.Default.css" />
         <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
         integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
         crossorigin=""></script>
-        <!-- <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/"></script> -->
+
     </head>
 
     <body>
@@ -94,13 +96,14 @@
                             <input type="text" class="input_resa" id="name" name="name" required>
                         </p>
 
-                        <p class="label_resa">Signature:
+                        <div class="label_resa">Signature: 
                             <br/>
                             <canvas class="input_resa" id="canvas" width="173px" height="50px"></canvas>
-                        </p>
+                        </div>
                     </div>
 
                     <p><input type="submit" id="resaButton" value="Réserver"></p>
+                    <div id = "confirmation_reservation"></div>
                     <div id = "comments"></div>
 
                 </div>
@@ -112,17 +115,17 @@
         </div>
 
 
-        <script src="js/ajax.js"></script>
-        <script src="lib/jquery-3.3.1.min.js"></script>
-        <script src="lib/leaflet.markercluster.js"></script>
-        <script src="js/slider.js"></script>
-        <script src="js/stations.js"></script>
-        <script src="js/map.js"></script>
-        <script src="js/marqueurs.js"></script>
-        <script src="js/storage.js"></script>
-        <script src="js/reservation.js"></script>
-        <script src="js/canvas.js"></script>
-        <script src="js/index.js" defer></script>
+        <script src="../js/ajax.js"></script>
+        <script src="../lib/jquery-3.3.1.min.js"></script>
+        <script src="../lib/leaflet.markercluster.js"></script>
+        <script src="../js/slider.js"></script>
+        <script src="../js/stations.js"></script>
+        <script src="../js/map.js"></script>
+        <script src="../js/marqueurs.js"></script>
+        <script src="../js/storage.js"></script>
+        <script src="../js/reservation.js"></script>
+        <script src="../js/canvas.js"></script>
+        <script src="../js/index.js" defer></script>
 
     </body>
 </html>
