--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset= "utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="../css/style.css"/>
+        <link rel="stylesheet" href="./css/style.css"/>
         <title>Vélô Toulouse</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-        <link rel="shortcut icon" type="image/jpg" href="logo-velotoulouse.jpg"/>
+        <link rel="shortcut icon" type="image/jpg" href="./images/logo-velotoulouse.jpg"/>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
         integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin=""/>
@@ -27,25 +27,25 @@
                     <div class="slider">
                         <div class="slides" id="slider_1">
                             <figure>
-                                <img src= "images/img_velotoulouse1_resize.jpg" alt="velotoulouse1"/>
+                                <img src= "./images/img_velotoulouse1_resize.jpg" alt="velotoulouse1"/>
                                 <figcaption>Déplacez-vous facilement grâce à VélÔToulouse</figcaption>
                             </figure>
                         </div>
                         <div class="slides" id="slider_2">
                             <figure>
-                                <img src= "images/img_velotoulouse2_resize.jpg" alt="velotoulouse2"/>
+                                <img src= "./images/img_velotoulouse2_resize.jpg" alt="velotoulouse2"/>
                                 <figcaption>Choisissez la station de votre choix sur la carte et réservez un vélo</figcaption>
                             </figure>
                         </div>
                         <div class="slides" id="slider_3">
                             <figure>
-                                <img src= "images/img_velotoulouse3_resize.jpg" alt="velotoulouse3"/>
+                                <img src= "./images/img_velotoulouse3_resize.jpg" alt="velotoulouse3"/>
                                 <figcaption>Retirez le vélo sous 20 minutes dans l'une des 280 stations de la ville rose</figcaption>
                             </figure>
                         </div>
                         <div class="slides" id="slider_4">
                             <figure>
-                                <img src= "images/img_velotoulouse4.jpg" alt="velotoulouse4"/>
+                                <img src= "./images/img_velotoulouse4.jpg" alt="velotoulouse4"/>
                                 <figcaption>Service de vélos en libre-service ouvert 24h/24, 7j/7</figcaption>
                             </figure>
                         </div>
@@ -96,7 +96,7 @@
                             <input type="text" class="input_resa" id="name" name="name" required>
                         </p>
 
-                        <div class="label_resa">Signature: 
+                        <div class="label_resa">Signature:
                             <br/>
                             <canvas class="input_resa" id="canvas" width="173px" height="50px"></canvas>
                         </div>
@@ -115,17 +115,17 @@
         </div>
 
 
-        <script src="../js/ajax.js"></script>
-        <script src="../lib/jquery-3.3.1.min.js"></script>
-        <script src="../lib/leaflet.markercluster.js"></script>
-        <script src="../js/slider.js"></script>
-        <script src="../js/stations.js"></script>
-        <script src="../js/map.js"></script>
-        <script src="../js/marqueurs.js"></script>
-        <script src="../js/storage.js"></script>
-        <script src="../js/reservation.js"></script>
-        <script src="../js/canvas.js"></script>
-        <script src="../js/index.js" defer></script>
+        <script src="./js/ajax.js"></script>
+        <script src="./lib/jquery-3.3.1.min.js"></script>
+        <script src="./lib/leaflet.markercluster.js"></script>
+        <script src="./js/slider.js"></script>
+        <script src="./js/stations.js"></script>
+        <script src="./js/map.js"></script>
+        <script src="./js/marqueurs.js"></script>
+        <script src="./js/storage.js"></script>
+        <script src="./js/reservation.js"></script>
+        <script src="./js/canvas.js"></script>
+        <script src="./js/index.js" defer></script>
 
     </body>
 </html>
