--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
         crossorigin=""/>
         <link rel="stylesheet" href="./css/MarkerCluster.css"/>
         <link rel="stylesheet" href="./css/MarkerCluster.Default.css"/>
-        <!-- <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/MarkerCluster.css" />
-        <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/MarkerCluster.Default.css" /> -->
         <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
         integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
         crossorigin=""></script>
@@ -60,7 +58,6 @@
                 <div id="next" class="fas fa-angle-right"></div>
             </div>
 
-
         </header>
 
         <div class="map_container">
@@ -74,7 +71,7 @@
                     <p>Adresse :
                         <span id=address_station></span>
                     </p>
-                    <p>Statut :
+                    <p>État :
                         <span id=status_station></span>
                     </p>
                     <p>Nombre total de places :
@@ -86,36 +83,38 @@
                 </div>
                 <div id="resa">
                     <h2>Réservation</h2>
-                    <div id ="content_reservation">
-                        <p>
-                            <label for="first_name" class="label_resa">Prénom:</label>
-                            <br/>
-                            <input type="text" class="input_resa" id="first_name" name="first_name" required>
-                        </p>
-                        <p>
-                            <label for="name" class="label_resa">Nom:</label>
-                            <br/>
-                            <input type="text" class="input_resa" id="name" name="name" required>
-                        </p>
+                    <form>
+                        <div id ="content_reservation">
+                            <p>
+                                <label for="first_name" class="label_resa">Prénom:</label>
+                                <br/>
+                                <input type="text" class="input_resa" id="first_name" name="first_name" required>
+                            </p>
+                            <p>
+                                <label for="name" class="label_resa">Nom:</label>
+                                <br/>
+                                <input type="text" class="input_resa" id="name" name="name" required>
+                            </p>
 
-                        <div class="label_resa">Signature:
-                            <br/>
-                            <canvas class="input_resa" id="canvas" width="173px" height="50px"></canvas>
+                            <div class="label_resa">Signature:
+                                <br/>
+                                <canvas class="input_resa" id="canvas" width="173px" height="50px"></canvas>
+                            </div>
                         </div>
-                    </div>
 
-                    <p><input type="submit" id="resaButton" value="Réserver"></p>
+                        <p><input type="submit" id="resaButton" value="Réserver"></p>
+                    </form>
                     <div id = "confirmation_reservation"></div>
                     <div id = "comments"></div>
 
                 </div>
             </div>
         </div>
+
         <div class ="resume">
             <div class="recap_resa"></div>
             <div id="timer"></div>
         </div>
-
 
         <script src="./js/ajax.js"></script>
         <script src="./lib/jquery-3.3.1.min.js"></script>
